fix overlapping regions blocking links. refs #12344
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathSiteCommon/trunk@54518 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/AllSites.css
+++ b/Site/htdocs/assets/css/AllSites.css
@@ -545,6 +545,7 @@ span.smallTitle {
    line-height: 1.2em;
    clear: both;
    padding: 9px;
+   position: relative;
 }
 
 .wide-footer {
@@ -560,23 +561,32 @@ span.smallTitle {
 }
 
 #footer .left, #footer .middle, #footer .right {
-  float: left;
   white-space: nowrap;
 }
 
 #footer .left {
+  float: left;
   width: 20%;
   text-align: left;
 }
 
-#footer .middle {
+/*#footer .middle {
   width: 40%;
   text-align: center;
-}
+}*/
 
 #footer .right {
+  float: right;
   width: 40%;
   text-align: right;
+}
+
+#footer .bottom {
+  clear: both;
+  position: absolute;
+  top: 0.8em;
+  width: 82%;
+}
 }
 
 #footer .build-info {
